resources/assets/stylesheets/scss/tables.scss
/* --- Tabellen ------------------------------------------------------------- */

// normale Tabellenheader
table.header,
.table_header {
    background-color: var(--table-header-color);
    border-bottom: 1px solid var(--color--table-border);
    color: var(--black);
    padding: 4px;

}

// formerly known as topic(-header)
.table_header_bold {
    background-color: var(--color--table-header);
    border-color: var(--color--table-border);
    border-style: solid;
    border-width: 0 0 1px 0;
    color: var(--color--font-inverted);
    font-size: 12pt;
    padding: 3px 5px;

    img,
    svg {
        vertical-align: middle;
    }

    // for the topic-icons
}

@mixin gradient-bar($flow-content: true) {
    #gradient {
        @include vertical-three-colors(#cdd9ed, #e3eaf6, 40%, #e3eaf6);
    }

    border-top: 1px solid var(--color--table-border);
    line-height: 17pt;
    height: 25px;

    @if $flow-content {
        &:last-child {
            padding-right: 5px;
        }

        img,
        svg {
            padding: 0 2px;
            vertical-align: text-bottom;
        }
    }
}

table.toolbar {
    @include gradient-bar(false);
}

td.toolbar,
td.printhead {
    @include gradient-bar;
}

td {
    &.aufklapp {
        background-color: var(--dark-gray-color-5);
    }

    &.angemeldet {
        border: 1px solid var(--black);
    }

    &.nix {
        background-color: transparent;
    }

    &.quote {
        border: 1px solid var(--black);
        font-size: 8px;
    }
}

table.blank,
td.blank,
td.onlineinfo,
td.blanksmall {
    background-color: var(--color--global-background);
}

table.fixed {
    table-layout: fixed;
}

td.tree-indent {
    img, svg {
        vertical-align: bottom;
    }
}

/* --- table.collapsable ---------------------------------------------------- */
// TODO: This is pretty hard to understand and should be replaced with an easier,
// better structured solution
.collapsable {
    .header-row > td {
        border-bottom: 0;
        padding-left: 0;
    }

    .toggle-indicator {
        color: var(--color--font-primary);
        font-weight: bold;

        a {
            background: left center no-repeat;
            @include icon(before, arr_1down, $align: middle, $padding: -4px);
            color: var(--color--font-primary);
            cursor: pointer;
            display: block;
            &::before {
                color: var(--color--highlight);
            }
        }

    }

    .empty .toggle-indicator a {
        @include icon(before, arr_1right, $align: middle, $padding: -4px);
        ::before {
            color: var(--color--font-inactive);
        }
    }

    .collapsed .toggle-indicator a {
        @include icon(before, arr_1right, $align: middle, $padding: -4px);
    }

    td.label-cell, .empty .toggle-indicator {
        padding-left: 20px;
    }

    > .collapsed {
        tr:not(.header-row) {
            display: none;
        }

        .toggle-indicator ~ *:not(.dont-hide) > * {
            opacity: 0;
            pointer-events: none;
        }
    }
}

* + html .collapsable .collapsed .header-row {
    display: inline-block !important;
}

// IE-Hack

/* --- Table details -------------------------------------------------------- */
.loaded-details {
    > td {
        padding: 0 0 5px 20px !important;
    }

    table {
        border-top: 0;
    }
}

/* --- Sonstige ------------------------------------------------------------- */
.gruppe0 {
    background-color: var(--group-color-0) !important;
}

.gruppe1 {
    background-color: var(--group-color-1) !important;
}

.gruppe2 {
    background-color: var(--group-color-2) !important;
}

.gruppe3 {
    background-color: var(--group-color-3) !important;
}

.gruppe4 {
    background-color: var(--group-color-4) !important;
}

.gruppe5 {
    background-color: var(--group-color-5) !important;
}

.gruppe6 {
    background-color: var(--group-color-6) !important;
}

.gruppe7 {
    background-color: var(--group-color-7) !important;
}

.gruppe8 {
    background-color: var(--group-color-8) !important;
}

#my_seminars {
    .gruppe0, .gruppe1, .gruppe2, .gruppe3, .gruppe4,
    .gruppe5, .gruppe6, .gruppe7, .gruppe9 {
        width: 1px;
    }

    .mycourse_elements > img {
        display: none;
    }

    .special_nav {
        float: right;
    }
}

.grey {
    background: var(--color--table-header) none;
}

.white {
    background: var(--color--global-background) none;
}

.red_gradient {
    #gradient {
        @include vertical-three-colors(#e3969a, #e8b6b9, 60%, #e8b6b9);
    }

    border-top: 2px solid var(--brown);
}

/* --- Styles fuer printhead und printcontent ------------------------------- */
table {
    td.printcontent {
        background-color: var(--dark-gray-color-5);
        text-align: left;
    }

    td.printcontent:hover {
        background-color: var(--dark-gray-color-5);
    }

    td.printhead2 {
        background-image: url("#{$image-path}/content_object_arr-right.png");
        border-top: 1px solid var(--color--table-border);
        padding: 0;
    }

    td.printhead3 {
        background-image: url("#{$image-path}/content_object_arr-down.png");
        border-top: 1px solid var(--color--table-border);
        padding: 0;
    }
}

/* classes for sortable table headers --------------------------------------- */
tr.sortable {
    th.sortasc,
    th.sortdesc {
        .tablesorter-header-inner {
            display: inline-block;
        }
        &::after {
            color: var(--color--highlight);
        }
    }

    th.sortasc {
        @include icon('after', 'arr_1up', $size: $icon-size-inline, $align: top, $padding: 2px);
    }

    th.sortdesc {
        @include icon('after', 'arr_1down', $size: $icon-size-inline, $align: top, $padding: 2px);
    }

    th {
        @include highlight-anchor;
    }
}

.tablesorter .filtered {
    display: none;
}

.tablesorter .tablesorter-errorRow td {
    text-align: center;
    cursor: pointer;
}
/* ... */

